registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  # namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  # strategy:
  #   type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /var/lib/registry
            name: registry-vol
      volumes:
      - name: registry-vol
        persistentVolumeClaim:
          claimName: registry-pvc
