api-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sapi
  namespace: kube-system
  labels:
    component: apiserver
    provider: kubernetes
  annotations:
    metallb.universe.tf/address-pool: k8sapi
spec:
  selector:
    component: kube-apiserver
    tier: control-plane
  ports:
  - port: 6443
    targetPort: 6443
  type: LoadBalancer
