registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: registry
