api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/listen-ports-ssl: "6443"
spec:
  tls:
  - hosts:
    - cloudapi.integranet.ph
    secretName: nginx-tls
  rules:
    - host: cloudapi.integranet.ph
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes
                port:
                  number: 6443
  ingressClassName: nginx
