dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - k8s.integranet.ph
    secretName: nginx-tls
  rules:
    - host: k8s.integranet.ph
      http:
        paths:
          - path: /dashboard/(.*)
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
  ingressClassName: nginx
