rook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ingress
  namespace: rook-ceph
  annotations:
#     # type of authentication
#     nginx.ingress.kubernetes.io/auth-type: basic
#     # prevent the controller from redirecting (308) to HTTPS
#     #nginx.ingress.kubernetes.io/ssl-redirect: 'false'
#     # name of the secret that contains the user/password definitions
#     nginx.ingress.kubernetes.io/auth-secret: basic-auth
#     # message to display with an appropriate context why the authentication is required
#     nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    # custom max body size for file uploading like backing image uploading
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - cloud.integranet.ph
    secretName: nginx-tls
  rules:
  - host: cloud.integranet.ph
    http:
      paths:
      - pathType: Prefix
        path: /rook/(.*)
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 8443
  ingressClassName: nginx
